[package]
name = "levenshteinjs"
version = "0.1.0"
authors = ["Krzysztof Zawisła <snowdropcurvemaster@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "levenshteinjs"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
neon = "0.3.3"
levenshtein = "1.0.4"